feat: Create estate_property_type search view

--- a/addons/estate/views/estate_property_type_views.xml
+++ b/addons/estate/views/estate_property_type_views.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <record id="estate_property_type_search" model="ir.ui.view">
+        <field name="name">estate.property.type.search</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+            <search string="Search Type Propertie">
+                <field name="name" string="Owner"/>
+            </search>
+        </field>
+    </record>
+
     <record id="estate_property_type_view_list" model="ir.ui.view">
         <field name="name">estate.property.type.list</field>
         <field name="model">estate.property.type</field>
