--- a/addons/estate/views/estate_menus.xml
+++ b/addons/estate/views/estate_menus.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <menuitem id="estate_property_menu" name="Estate Property">
-        <menuitem id="estate_first_level_menu" name="Advertisements">
-            <menuitem id="estate_property_menu_action" action="estate_property_action"/>
-        </menuitem>
-    </menuitem>
+    <menuitem id="estate_root_menu" name="Real Estate"/>
 
-    <menuitem id="estate_property_type_menu" name="Property Type">
-        <menuitem id="estate_second_level_menu" name="Settings">
-            <menuitem id="estate_property_type_menu_action" action="estate_property_type_action"/>
-        </menuitem>
-    </menuitem>
+    <menuitem id="estate_advertisements_menu"
+              name="Advertisements"
+              parent="estate_root_menu"/>
+    
+    <menuitem id="estate_property"
+              name="Estate Property"
+              parent="estate_advertisements_menu"
+              action="estate_property_action"/>
 
+    <menuitem id="estate_settings_menu"
+              name="Settings"
+              parent="estate_root_menu"/>
+
+    <menuitem id="estate_property_type_menu"
+              name="Property Types"
+              parent="estate_settings_menu"
+              action="estate_property_type_action"/>
 </odoo>
