--- a/addons/estate/views/estate_property_views.xml
+++ b/addons/estate/views/estate_property_views.xml
@@ -185,6 +185,16 @@
                                     </div>
                                 </div>
                             </group>
+                            <group class="px-3">
+                                <div class="row mb-0">
+                                    <div class="col-2">
+                                        <label for="property_type_id" string="Property Type" class="o_form_label"/>
+                                    </div>
+                                    <div class="col-4">
+                                        <field name="property_type_id"/>
+                                    </div>
+                                </div>
+                            </group>
                         </page>
                     </notebook>
                 </sheet>
