--- a/addons/estate/views/estate_property_offer_views.xml
+++ b/addons/estate/views/estate_property_offer_views.xml
@@ -4,12 +4,28 @@
     <record id="estate_property_offer_view_list" model="ir.ui.view">
         <field name="name">estate.property.offer.list</field>
         <field name="model">estate.property.offer</field>
-        <field name="arch" string="xml">
+        <field name="arch" type="xml">
             <list string="Channel">
                 <field name="price"/>
                 <field name="partner_id"/>
                 <field name="status"/>
             </list>
+        </field>
+    </record>
+
+    <record id="estate_property_offer_view_form" model="ir.ui.view">
+        <field name="name">estate.property.offer.form</field>
+        <field name="model">estate.property.offer</field>
+        <field name="arch" type="xml">
+            <form string="Property Offers">
+                <sheet>
+                    <group class="px-3">
+                        <field name="price" />
+                        <field name="partner_id" />
+                        <field name="status" />
+                    </group>
+                </sheet>
+            </form>
         </field>
     </record>
 
