feat: Add best_offer field to estate_property form view

--- a/addons/estate/views/estate_property_views.xml
+++ b/addons/estate/views/estate_property_views.xml
@@ -90,10 +90,10 @@
                         <group>
                             <div class="row">
                                 <div class="col-3">
-                                    <label for="selling_price" string="Selling Price" class="o_form_label fw-bold"/>
+                                    <label for="best_offer" string="Best Offer" class="o_form_label"/>
                                 </div>
                                 <div class="col-5">
-                                    <field name="selling_price" nolabel="1"/>
+                                    <field name="best_offer" />
                                 </div>
                             </div>
                         </group>
@@ -104,6 +104,16 @@
                                 </div>
                                 <div class="col-5">
                                     <field name="date_availability" nolabel="1"/>
+                                </div>
+                            </div>
+                        </group>
+                        <group>
+                            <div class="row">
+                                <div class="col-3">
+                                    <label for="selling_price" string="Selling Price" class="o_form_label fw-bold"/>
+                                </div>
+                                <div class="col-5">
+                                    <field name="selling_price" nolabel="1"/>
                                 </div>
                             </div>
                         </group>
