--- a/addons/estate/views/estate_property_views.xml
+++ b/addons/estate/views/estate_property_views.xml
@@ -143,7 +143,7 @@
                             <group class="px-3">
                                 <div class="row mb-0">
                                     <div class="col-2">
-                                        <label for="living_area" string="Living Area" class="o_form_label"/>
+                                        <label for="living_area" string="Living Area (sqm)" class="o_form_label"/>
                                     </div>
                                     <div class="col-4">
                                         <field name="living_area"/>
@@ -183,7 +183,7 @@
                             <group class="px-3">
                                 <div class="row mb-0">
                                     <div class="col-2">
-                                        <label for="garden_area" string="Garden Area" class="o_form_label"/>
+                                        <label for="garden_area" string="Garden Area (sqm)" class="o_form_label"/>
                                     </div>
                                     <div class="col-4">
                                         <field name="garden_area"/>
