--- a/addons/estate/views/estate_property_offer_views.xml
+++ b/addons/estate/views/estate_property_offer_views.xml
@@ -8,6 +8,8 @@
             <list string="Channel">
                 <field name="price"/>
                 <field name="partner_id"/>
+                <field name="validity"/>
+                <field name="date_deadline"/>
                 <field name="status"/>
             </list>
         </field>
@@ -22,6 +24,8 @@
                     <group class="px-3">
                         <field name="price" />
                         <field name="partner_id" />
+                        <field name="validity" string="Validity (days)"/>
+                        <field name="date_deadline" />
                         <field name="status" />
                     </group>
                 </sheet>
