--- a/addons/estate/views/estate_property_offer_views.xml
+++ b/addons/estate/views/estate_property_offer_views.xml
@@ -10,6 +10,8 @@
                 <field name="partner_id"/>
                 <field name="validity"/>
                 <field name="date_deadline"/>
+                <button name="action_set_status_accepted" type="object" icon="fa-check"/>
+                <button name="action_set_status_refused" type="object" icon="fa-close"/>
                 <field name="status"/>
             </list>
         </field>
