--- a/addons/estate/views/estate_property_type_views.xml
+++ b/addons/estate/views/estate_property_type_views.xml
@@ -32,6 +32,17 @@
                             <field name="name"/>
                         </div>
                     </group>
+                    <notebook>
+                        <page string="Properties">
+                            <field name="property_ids">
+                                <list>
+                                    <field name="name" string="Title"/>
+                                    <field name="expected_price" />
+                                    <field name="state" string="Status"/>
+                                </list>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
