--- a/addons/estate/views/estate_property_views.xml
+++ b/addons/estate/views/estate_property_views.xml
@@ -48,6 +48,7 @@
                 <header>
                     <button string="Sold" name="action_set_sold" type="object" class="oe_highlight"/>
                     <button string="Cancel" name="action_set_cancelled" type="object" class="oe_highlight"/>
+                    <field name="state" widget="statusbar" statusbar_visible="offer received,offer accepted,sold"/>
                 </header>
                 <sheet>
                     <group class="px-3">
@@ -61,26 +62,6 @@
                         </div>
                     </div>
                     <group class="px-3 mb-4">
-                        <group class="px-3">
-                            <div class="row mb-0">
-                                <div class="col-4">
-                                    <label for="state" string="Status" class="o_form_label"/>
-                                </div>
-                                <div class="col-4">
-                                    <field name="state"/>
-                                </div>
-                            </div>
-                        </group>
-                        <group>
-                            <div class="row">
-                                <div class="col-3">
-                                    <label for="expected_price" string="Expected Price" class="o_form_label fw-bold"/>
-                                </div>
-                                <div class="col-6">
-                                    <field name="expected_price" nolabel="1"/>
-                                </div>
-                            </div>
-                        </group>
                         <group>
                             <div class="row mb-0">
                                 <div class="col-4">
@@ -94,10 +75,10 @@
                         <group>
                             <div class="row">
                                 <div class="col-3">
-                                    <label for="best_offer" string="Best Offer" class="o_form_label"/>
+                                    <label for="expected_price" string="Expected Price" class="o_form_label fw-bold"/>
                                 </div>
-                                <div class="col-5">
-                                    <field name="best_offer" />
+                                <div class="col-6">
+                                    <field name="expected_price" nolabel="1"/>
                                 </div>
                             </div>
                         </group>
@@ -114,10 +95,10 @@
                         <group>
                             <div class="row">
                                 <div class="col-3">
-                                    <label for="selling_price" string="Selling Price" class="o_form_label fw-bold"/>
+                                    <label for="best_offer" string="Best Offer" class="o_form_label"/>
                                 </div>
                                 <div class="col-5">
-                                    <field name="selling_price" nolabel="1"/>
+                                    <field name="best_offer" />
                                 </div>
                             </div>
                         </group>
@@ -128,6 +109,16 @@
                                 </div>
                                 <div class="col-5">
                                     <field name="date_availability" nolabel="1"/>
+                                </div>
+                            </div>
+                        </group>
+                        <group>
+                            <div class="row">
+                                <div class="col-3">
+                                    <label for="selling_price" string="Selling Price" class="o_form_label fw-bold"/>
+                                </div>
+                                <div class="col-5">
+                                    <field name="selling_price" nolabel="1"/>
                                 </div>
                             </div>
                         </group>
