--- a/addons/estate/views/estate_property_type_views.xml
+++ b/addons/estate/views/estate_property_type_views.xml
@@ -17,6 +17,7 @@
         <field name="arch" type="xml">
             <list string="Channel">
                 <field name="name"/>
+                <field name="sequence" widget="handle"/>
             </list>
         </field>
     </record>
