--- a/addons/estate/views/estate_property_views.xml
+++ b/addons/estate/views/estate_property_views.xml
@@ -68,7 +68,7 @@
                                     <label for="property_type_id" string="Property Type" class="o_form_label"/>
                                 </div>
                                 <div class="col-4">
-                                    <field name="property_type_id"/>
+                                    <field name="property_type_id" options="{'no_create': true, 'no_open': true}"/>
                                 </div>
                             </div>
                         </group>
