--- a/addons/estate/views/estate_property_tag_views.xml
+++ b/addons/estate/views/estate_property_tag_views.xml
@@ -5,7 +5,7 @@
         <field name="name">estate.property.tag.list</field>
         <field name="model">estate.property.tag</field>
         <field name="arch" type="xml">
-            <list string="Channel">
+            <list string="Channel" editable="bottom">
                 <field name="name"/>
             </list>
         </field>
