--- a/addons/estate/views/estate_property_offer_views.xml
+++ b/addons/estate/views/estate_property_offer_views.xml
@@ -5,14 +5,13 @@
         <field name="name">estate.property.offer.list</field>
         <field name="model">estate.property.offer</field>
         <field name="arch" type="xml">
-            <list string="Channel" editable="bottom">
+            <list string="Channel" editable="bottom" decoration-danger="status=='refused'" decoration-success="status=='accepted'">
                 <field name="price"/>
                 <field name="partner_id"/>
                 <field name="validity"/>
                 <field name="date_deadline"/>
-                <button name="action_set_status_accepted" type="object" invisible="status == 'accepted'" icon="fa-check"/>
-                <button name="action_set_status_refused" type="object" invisible="status == 'refused'" icon="fa-close"/>
-                <field name="status"/>
+                <button name="action_set_status_accepted" type="object" invisible="status == 'accepted' or status == 'refused'" icon="fa-check"/>
+                <button name="action_set_status_refused" type="object" invisible="status == 'refused' or status == 'accepted'" icon="fa-close"/>
             </list>
         </field>
     </record>
