--- a/addons/estate/views/estate_property_offer_views.xml
+++ b/addons/estate/views/estate_property_offer_views.xml
@@ -10,6 +10,7 @@
                 <field name="partner_id"/>
                 <field name="validity"/>
                 <field name="date_deadline"/>
+                <field name="property_type_id"></field>
                 <button name="action_set_status_accepted" type="object" invisible="status == 'accepted' or status == 'refused'" icon="fa-check"/>
                 <button name="action_set_status_refused" type="object" invisible="status == 'refused' or status == 'accepted'" icon="fa-close"/>
             </list>
