--- a/addons/estate/views/estate_property_views.xml
+++ b/addons/estate/views/estate_property_views.xml
@@ -10,7 +10,7 @@
                 <field name="post_code"/>
                 <field name="expected_price"/>
                 <field name="bedrooms"/>
-                <field name="living_area" string="Living Area" filter_domain="[('living_area', '&lt;=', self)]"/>
+                <field name="living_area" string="Living Area" filter_domain="[('living_area', '&gt;=' , self)]"/>
                 <field name="facades"/>
                 <filter name="state" 
                         string="Available" 
