--- a/addons/estate/views/estate_property_type_views.xml
+++ b/addons/estate/views/estate_property_type_views.xml
@@ -28,9 +28,11 @@
         <field name="arch" type="xml">
             <form string="Property Type">
                 <sheet>
+                    <button class="oe_stat_button" type="action" name="%(estate.estate_property_offer_action)d" string="Offers" icon="fa-money"/>
                     <group class="px-3">
                         <div class="display-5 mb-4 mt-1 col-6">
                             <field name="name"/>
+                            <field name="offer_count" />
                         </div>
                     </group>
                     <notebook>
