--- a/addons/estate/views/estate_property_type_views.xml
+++ b/addons/estate/views/estate_property_type_views.xml
@@ -28,11 +28,18 @@
         <field name="arch" type="xml">
             <form string="Property Type">
                 <sheet>
-                    <button class="oe_stat_button" type="action" name="%(estate.estate_property_offer_action)d" string="Offers" icon="fa-money"/>
+                    <div class="d-flex justify-content-end mb-3">
+                        <button name="%(estate.estate_property_offer_action)d"
+                                type="action"
+                                class="oe_stat_button border rounded shadow-sm"
+                                icon="fa-money">
+                            <field string=" Offers" name="offer_count" widget="statinfo"/>
+                        </button>
+                    </div>
+                    <hr/>
                     <group class="px-3">
                         <div class="display-5 mb-4 mt-1 col-6">
                             <field name="name"/>
-                            <field name="offer_count" />
                         </div>
                     </group>
                     <notebook>
