--- a/addons/estate/views/estate_property_views.xml
+++ b/addons/estate/views/estate_property_views.xml
@@ -42,6 +42,39 @@
         </field>
     </record>
 
+    <record id="estate_property_view_kanban" model="ir.ui.view">
+        <field name="name">estate.property.kanban</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <kanban>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="row">
+                            <div>
+                                <field name="name" class="fw-bold"/>
+                            </div>
+                            <div class="d-flex align-items-center gap-2">
+                                <span class="text-muted">Expected Price:</span>
+                                <field name="expected_price" class="oe_kanban_text"/>
+                            </div>
+                            <div t-if="record.best_offer.raw_value > 0" class="d-flex align-items-center gap-2">
+                                <span class="text-muted">Best Offer:</span>
+                                <field name="best_offer" class="oe_kanban_text"/>
+                            </div>
+                            <div t-if="record.selling_price.raw_value > 0" class="d-flex align-items-center gap-2">
+                                <span class="text-muted">Selling Price:</span>
+                                <field name="selling_price" class="oe_kanban_text"/>
+                            </div>
+                            <div class="mt-1">
+                                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
     <record id="estate_property_view_form" model="ir.ui.view">
         <field name="name">estate.property.form</field>
         <field name="model">estate.property</field>
@@ -258,7 +291,7 @@
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
-        <field name="view_mode">list,form</field>
+        <field name="view_mode">kanban,list,form</field>
         <field name="context">{'search_default_state':True}</field>
     </record>
 </odoo>
