feat: Add demo data

--- a/addons/estate/views/estate_menus.xml
+++ b/addons/estate/views/estate_menus.xml
@@ -7,6 +7,11 @@
                 name="Advertisements"
                 parent="estate_root_menu"/>
 
+        <menuitem id="estate_report"
+                name="Report"
+                parent="estate_root_menu"
+                action="action_report_estate_property"/>
+        
         <menuitem id="estate_property"
                 name="Estate Property"
                 parent="estate_advertisements_menu"
