feat: Rename price for offers

--- a/addons/estate/report/estate_property_templates.xml
+++ b/addons/estate/report/estate_property_templates.xml
@@ -16,7 +16,7 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th>Price</th>
+                                        <th>Offers</th>
                                     </tr>
                                 </thead>
                                 <tbody>
